# take_notes

./: docker-compose.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
nginx/: default.conf
web_app/: package-lock.json  package.json
