[package]
name = "take_notes_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
rocket = { version = "0.5.0", features = ["secrets", "json"] }
